--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -5,11 +5,21 @@ $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 $breakpoint-2xl: 1440px;
 
+// TEXT SIZES
+
+$heading-1: 64px;
+$heading-2: 48px;
+$heading-3: 34px;
+$heading-4: 28px;
+$heading-5: 24px;
+$heading-6: 20px;
+$heading-7: 18px;
+
 // COLOURS
 
 // Primary colour
 // $primary-900: #1F2430; // High text
-$primary-900: #5643cc; // High text
+$primary-900: #15121C; // High text
 // $primary-900: #6839EF; // High text
 $primary-900-hover: lighten($primary-900, 10%);
 $primary-light: rgba($primary-900, 0.1);
@@ -78,7 +88,7 @@ $warning-200:rgba($warning-900, 0.05);
 $warning-100: rgba($warning-900, 0.03);
 
 // Dark colours
-$dark-900: #1F2430; // High text
+$dark-900: #15121C; // High text
 $dark-900-hover: lighten($dark-900, 10%);
 $dark-light: rgba($dark-900, 0.1);
 $dark-800: rgba($dark-900, 0.72); // Medium text
@@ -111,7 +121,7 @@ $black-hover: lighten($black, 10%);
 
 // Background
 
-$background: $primary-100;
+$background: #F6F6F4;
 
 // Gradients
 
