--- a/pages/names/index.module.scss
+++ b/pages/names/index.module.scss
@@ -4,3 +4,107 @@
   margin-top: 120px;
   margin-bottom: 120px;
 }
+
+.genderSwitchWrapper {
+  transition: $transition-standard;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  background: $dark-200;
+  border-radius: $radius-large;
+  border: none;
+  box-shadow: $shadow-inset-1;
+  // &:hover {
+  //   // background: $dark-light;
+  //   box-shadow: $shadow-inset-1;
+  //   .genderSwitchStyles {
+  //     box-shadow: $shadow-1;
+  //   }
+  // }
+}
+
+.genderSwitchStyles {
+  transition: $transition-standard;
+  box-shadow: $shadow-1;
+}
+
+.genderSwitchStylesMale {
+  left: 2px;
+}
+
+.genderSwitchStylesFemale {
+  left: 46px;
+}
+
+.genderSwitchMaleIcon {
+  transition: $transition-standard;
+  path {
+    fill: $dark-700;
+  }
+  &.active {
+    path {
+      fill: #598FF3;
+    }
+  }
+}
+
+.genderSwitchFemaleIcon {
+  transition: $transition-standard;
+  path {
+    fill: $dark-700;
+  }
+  &.active {
+    path {
+      fill: #DE80E0;
+    }
+  }
+}
+
+.shortlistButton {
+  &:hover {
+    svg path {
+      fill: $error-900!important;
+    }
+  }
+}
+
+.shortlistButtonHighlight {
+  background-color: $light-900!important;
+  opacity: 1!important;
+  svg path {
+    fill: $error-900!important;
+  }
+}
+
+.epicPoemCard {
+  background: $light-900;
+  max-width: 480px;
+  transition: $transition-standard;
+  &:hover {
+    box-shadow: $shadow-5;
+    transform: scale(1.02);
+  }
+}
+
+.epicPoemIllustration {
+  box-shadow: $shadow-1;
+  width: fit-content;
+  transition: $transition-standard;
+  &:hover {
+    box-shadow: $shadow-5;
+    transform: scale(1.02);
+  }
+}
+
+.epicPoemIllustrationIliad {
+  background-color: #4B2123;
+  svg path {
+    stroke: #E07443;
+  }
+}
+.epicPoemIllustrationOdyssey {
+  background-color: #0D4F59;
+  svg path {
+    stroke: #7AD7FF;
+  }
+}
