--- a/pages/names/index.module.scss
+++ b/pages/names/index.module.scss
@@ -87,11 +87,10 @@
 }
 
 .epicPoemIllustration {
-  box-shadow: $shadow-1;
+  // box-shadow: $shadow-1;
   width: fit-content;
   transition: $transition-standard;
   &:hover {
-    box-shadow: $shadow-5;
     transform: scale(1.02);
   }
 }
@@ -107,4 +106,76 @@
   svg path {
     stroke: #7AD7FF;
   }
+}
+
+@keyframes transitionIliad {
+  0%, 20% {
+    background-color: $background;
+    box-shadow: $shadow-0;
+    transform: scale(1);
+  }
+  40%, 60% {
+    background-color: $background;
+    box-shadow: $shadow-1;
+    transform: scale(1);
+  }
+  80%, 100% {
+    background-color: #4B2123;
+    box-shadow: $shadow-1;
+    transform: scale(1.02);
+  }
+}
+@keyframes transitionIliadColourPaths {
+  0%, 60% {
+    opacity: 0;
+  }
+  80%, 100% {
+    opacity: 1;
+  }
+}
+@keyframes transitionIliadGreyPaths {
+  0%, 80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+// @keyframes transitionIliad {
+//   0% {
+//     background-color: $dark-200;
+//     svg path {
+//       stroke: $dark-700;
+//     }
+//   }
+//   50% {
+//     background-color: $dark-200;
+//     svg path {
+//       stroke: $dark-700;
+//     }
+//   }
+//   100% {
+//     background-color: #4B2123;
+//     svg path {
+//       stroke: #E07443;
+//     }
+//   }
+// }
+
+.epicPoemIllustrationIliadAnimate {
+  animation: transitionIliad 2s ease-in-out infinite;
+  // animation-fill-mode: forwards; 
+  // svg path {
+  //   stroke: #E07443;
+  // }
+}
+
+.epicPoemIllustrationIliadColourPathAnimate {
+  animation: transitionIliadColourPaths 2s ease-in-out infinite;
+  // animation-fill-mode: forwards; 
+}
+
+.epicPoemIllustrationIliadGreyPathAnimate {
+  animation: transitionIliadGreyPaths 2s ease-in-out infinite;
+  // animation-fill-mode: forwards; 
 }
