--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1945,6 +1945,62 @@ textarea {
   }
 }
 
+.ldsRippleLarge {
+  /* change color here */
+  color: $dark-700
+}
+.ldsRippleLarge,
+.ldsRippleLarge div {
+  box-sizing: border-box;
+}
+.ldsRippleLarge {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  // margin-top: -16px;
+}
+.ldsRippleLarge div {
+  position: absolute;
+  border: 4px solid currentColor;
+  opacity: 1;
+  border-radius: 50%;
+  animation: ldsRippleLarge 1.5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.ldsRippleLarge div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes ldsRippleLarge {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 4px;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 1;
+  }
+  100% {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    opacity: 0;
+  }
+}
+
 // Bootstrap additions
 
 .w-sm-auto {
