--- a/pages/shortlist/shortlist.module.scss
+++ b/pages/shortlist/shortlist.module.scss
@@ -71,3 +71,37 @@
     }
   }
 }
+
+.shortlistItemExpand {
+  background-color: $light-900;
+  min-height: 240px;
+  // box-shadow: $shadow-0;
+  transition: $transition-standard;
+  h3, p {
+    transition: $transition-standard;
+    color: $dark-700
+  }
+  &:hover {
+    box-shadow: $shadow-5;
+    transform: translateX(20px) translateY(20px) scale(1.02);
+    h3 {
+      color: $dark-900
+    }
+    p {
+      color: $dark-800
+    }
+  }
+}
+
+.shareGrid {
+  display: grid;
+  font-weight: 500;
+  text-align: center;
+  grid-template-columns: repeat(2, 1fr);
+  @media (min-width: $breakpoint-xs) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (min-width: $breakpoint-sm) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
