hacky share page from shortlist

--- a/pages/shortlist/shortlist.module.scss
+++ b/pages/shortlist/shortlist.module.scss
@@ -105,3 +105,13 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
+.shareGrid img {
+  border-radius: $radius-round;
+  cursor: pointer;
+  overflow: hidden;
+  transition: $transition-standard;
+  &:hover {
+    box-shadow: $shadow-1;
+  }
+}
