--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -349,6 +349,9 @@ hr {border-top: 1px solid $dark-300;}
 .fill-error-200 { fill: $error-200; }
 .fill-error-100 { fill: $error-100; }
 
+.fill-male { fill: $male }
+.fill-female { fill: $female }
+
 // Border Radius
 
 .radius-0 { border-radius: $radius-none };
